--- a/LostAnimalsProject/LostAnimals/src/main/res/layout/activity_main.xml
+++ b/LostAnimalsProject/LostAnimals/src/main/res/layout/activity_main.xml
@@ -2,11 +2,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:context=".LAMain">
+
+    <!-- DEAD PADDING
+
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".LAMain">
+    -->
 
     <FrameLayout
         android:id="@+id/fragment_container"
