--- a/LostAnimalsProject/LostAnimals/src/main/res/layout/fragment_home.xml
+++ b/LostAnimalsProject/LostAnimals/src/main/res/layout/fragment_home.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="@color/grey80"
+
+        >
 
     <!-- Google Plus Layout -->
     <ListView
@@ -10,8 +14,32 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@null"
-        android:dividerHeight="0dp"
+        android:dividerHeight="32dp"
+        android:layout_margin="16dp"
+        android:fillViewport="true"
+        tools:listitem="@layout/layout_home_item"/>
+
+
+
+    <TextView
+        android:id="@+id/no_pets_message"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+
+        android:text="@string/no_pets"
+        android:textSize="28dp"
+        android:visibility="gone"
         />
+
+    <ProgressBar
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/pb_loading"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            />
 
 
 </RelativeLayout>
