CAPTAINS LOG: ….Man is it late.
HUGE Progress
- Added Detail View
- On updated pet data for pets you've already seen creates a
notification alert

--- a/LostAnimalsProject/LostAnimals/src/main/res/layout/fragment_home.xml
+++ b/LostAnimalsProject/LostAnimals/src/main/res/layout/fragment_home.xml
@@ -15,6 +15,7 @@
         android:layout_height="match_parent"
         android:divider="@null"
         android:dividerHeight="32dp"
+        android:listSelector="@android:color/holo_blue_light"
         android:layout_margin="16dp"
         android:fillViewport="true"
         tools:listitem="@layout/layout_home_item"/>
