--- a/LostAnimalsProject/LostAnimals/src/main/res/layout/layout_home_item.xml
+++ b/LostAnimalsProject/LostAnimals/src/main/res/layout/layout_home_item.xml
@@ -3,7 +3,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@android:color/white"
+                android:paddingTop="16dp"
+                android:paddingBottom="16dp"
         >
 
 
@@ -74,7 +75,14 @@
 
     </RelativeLayout>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:focusable="false"
+        android:background="@drawable/card_selector"
+            >
 
+        </RelativeLayout>
 
 
 </RelativeLayout>
