--- a/LostAnimalsProject/LostAnimals/src/main/res/menu/fragment_report.xml
+++ b/LostAnimalsProject/LostAnimals/src/main/res/menu/fragment_report.xml
@@ -2,4 +2,11 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item
+        android:id="@+id/menu_send"
+        android:title="Send Report"
+        android:showAsAction="ifRoom"
+        android:icon="@drawable/ic_action_send_dark"
+        />
+
 </menu>
