Final Version Commit
ITS THE FINAL COUNTDOWN!!!

--- a/LostAnimalsProject/LostAnimals/src/main/res/layout/fragment_home.xml
+++ b/LostAnimalsProject/LostAnimals/src/main/res/layout/fragment_home.xml
@@ -15,6 +15,7 @@
         android:layout_height="match_parent"
         android:divider="@null"
         android:dividerHeight="0dp"
+        android:listSelector="@color/transparent"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:scrollbars="none"
